--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -4,13 +4,25 @@ import "@fortawesome/fontawesome-free/css/all.css";
 
 <ol class="grid grid-flow-col gap-5 text-base">
     <li>
-        <a href="#" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-instagram fa-lg"></i>
+        <a
+            class="text-2xl"
+            style="color:var(--color-primary);"
+            href="https://instagram.com/ninelives.studio"
+            target="_blank"
+            aria-label="Instagram"
+        >
+            <i class="fab fa-instagram"></i>
         </a>
     </li>
     <li>
-        <a href="#" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-soundcloud fa-lg"></i>
+        <a
+            class="text-2xl"
+            style="color:var(--color-primary);"
+            href="https://soundcloud.com/ninelives.studio"
+            target="_blank"
+            aria-label="SoundCloud"
+        >
+            <i class="fab fa-soundcloud"></i>
         </a>
     </li>
 </ol>
