--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,9 @@ import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
 import Home from "../pages/Home.astro";
 import Music from "../pages/Music.astro";
-import { studio } from "../data/studio";
-import { instruments } from "../data/instruments";
+import About from "./About.astro";
+import Contact from "./Contact.astro";
+import Footer from "./Footer.astro";
 ---
 
 <Layout>
@@ -12,67 +13,8 @@ import { instruments } from "../data/instruments";
 	<Home />
 	<main>
 		<Music />
-		<section id="about" class="my-24">
-			<h1 class="font-extrabold text-5xl text-primary my-10">
-				ABOUT NINE LIVES STUDIO
-			</h1>
-			<div class="grid gap-3">
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-					Sequi ullam ab debitis est accusamus corporis expedita
-					quaerat, quis consequuntur officiis labore tempora,
-					consequatur illo quia dolore repellendus quasi, nisi
-					officia.
-				</p>
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-					Sequi ullam ab debitis est accusamus corporis expedita
-					quaerat, quis consequuntur officiis labore tempora,
-					consequatur illo quia dolore repellendus quasi, nisi
-					officia.
-				</p>
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-					Sequi ullam ab debitis est accusamus corporis expedita
-					quaerat, quis consequuntur officiis labore tempora,
-					consequatur illo quia dolore repellendus quasi, nisi
-					officia.
-				</p>
-				<img
-					src="#"
-					alt=""
-					class="my-3 aspect-square rounded-md bg-neutral-100"
-				/>
-			</div>
-		</section>
-		<section id="contact" class="my-24">
-			<h1 class="font-extrabold text-5xl text-primary my-10">
-				NINE LIVES STUDIO
-			</h1>
-			<div class="grid gap-10">
-				<article>
-					<p class="text-sm font-bold">General Information</p>
-					<p class="my-3 text-sm font-regular">Lorem ipsum...</p>
-					<a
-						class="font-medium text-primary underline"
-						href="mailto:info@ninelives.studio"
-						>info@ninelives.studio</a
-					>
-				</article>
-				<article>
-					<p class="text-sm font-bold">Bookings</p>
-					<p class="my-3 text-sm font-normal">Lorem ipsum...</p>
-					<a
-						class="font-medium text-primary underline"
-						href="mailto:hello@ninelives.studio"
-						>info@ninelives.studio</a
-					>
-				</article>
-			</div>
-		</section>
+		<About />
+		<Contact />
 	</main>
-	<footer class="py-10 px-5 bg-primary text-white font-light">
-		<p>Ninelivestudio.com - Copyright 2025</p>
-		<p>Made with manic obsession.</p>
-	</footer>
+	<Footer />
 </Layout>
