--- a/src/pages/Home.astro
+++ b/src/pages/Home.astro
@@ -6,7 +6,7 @@ import nlsImage from '../assets/nls.png';
 
 <section
     id="home"
-    class="xl:h-screen w-full flex flex-col gap-8 px-4 md:px-12 xl:px-24 py-8 md:py-12 xl:py-20 mt-24"
+    class="w-full flex flex-col gap-8 px-4 md:px-12 xl:px-24 py-8 md:py-12 xl:py-20 mt-24"
     style="background-color:var(--color-bg-section);"
 >
     <div class="w-full">
