Update texts to spanish

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,10 +2,10 @@
 import Socials from "./Socials.astro";
 
 const options = [
-    { title: "Home", url: "#home" },
-    { title: "Portfolio", url: "#portfolio" },
-    { title: "About", url: "#about" },
-    { title: "Contact", url: "#contact" },
+    { title: "Inicio", url: "#home" },
+    { title: "Portafolio", url: "#portfolio" },
+    { title: "Sobre nosotros", url: "#about" },
+    { title: "Contacto", url: "#contact" },
 ];
 ---
 
