--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -8,8 +8,8 @@
     </h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
         <article>
-            <p class="text-sm font-bold" style="color:var(--color-text-main);">General Information</p>
-            <p class="my-3 text-sm font-regular" style="color:var(--color-text-main);">Lorem ipsum...</p>
+            <p class="text-sm font-bold" style="color:var(--color-text-main);">Información general</p>
+            <p class="my-3 text-sm font-regular" style="color:var(--color-text-main);">Escríbenos a:</p>
             <a
                 class="font-medium underline"
                 style="color:var(--color-primary);"
@@ -17,8 +17,8 @@
             >
         </article>
         <article>
-            <p class="text-sm font-bold" style="color:var(--color-text-main);">Bookings</p>
-            <p class="my-3 text-sm font-normal" style="color:var(--color-text-main);">Lorem ipsum...</p>
+            <p class="text-sm font-bold" style="color:var(--color-text-main);">Reservas</p>
+            <p class="my-3 text-sm font-normal" style="color:var(--color-text-main);">¿Quieres trabajar con nosotros o agendar una sesión?</p>
             <a
                 class="font-medium underline"
                 style="color:var(--color-primary);"
@@ -26,7 +26,8 @@
             >
         </article>
         <article>
-            <p class="text-sm font-bold" style="color:var(--color-text-main);">Socials</p>
+            <p class="text-sm font-bold" style="color:var(--color-text-main);">Redes sociales</p>
+            <p class="my-3 text-sm font-normal" style="color:var(--color-text-main);">Síguenos y mantente al tanto de nuestros últimos proyectos</p>
             <div class="my-3 flex gap-4">
                 <a
                     class="text-2xl"
