--- a/src/pages/Home.astro
+++ b/src/pages/Home.astro
@@ -30,7 +30,7 @@ import nlsImage from '../assets/nls.png';
             <p class="text-base xl:text-lg mb-3" style="color:var(--color-text-main);">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
-            <a href="#" class="underline font-medium text-sm whitespace-nowrap" style="color:var(--color-primary);">Sobre nosotros</a>
+            <a href="#about" class="underline font-medium text-sm whitespace-nowrap" style="color:var(--color-primary);">Sobre nosotros</a>
         </div>
         <div class="flex justify-center items-center h-48 md:h-64 xl:h-80 w-full">
             <Image src={nlsImage} alt="Nine Lives Studio" class="max-w-full max-h-full object-contain" />
