--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -9,7 +9,7 @@ import aboutImage from '../assets/about-image.jpeg';
   </div>
   <div class="w-full md:w-1/2 flex flex-col relative">
     <h1 class="w-full text-left font-extrabold text-[8vw] leading-none tracking-tight uppercase mb-8" style="color:var(--color-primary);">
-      <span class="md:block md:-ml-36">ABOUT</span>
+      <span class="md:block md:-ml-36">SOBRE</span>
       <span class="md:block md:-ml-24">NINE LIVES</span>
       <span class="md:block md:-ml-14">STUDIO</span>
     </h1>
