--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,14 +2,14 @@
 import "../styles/global.css";
 ---
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-		<title>Nine Lives Studio</title>
+		<title>Nine Lives Studio | Estudio de Mezcla, Mastering y Post Producción de Audio</title>
 	</head>
 	<body>
 		<slot />
