--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
 import Home from "../pages/Home.astro";
-import Music from "../pages/Music.astro";
+import Portfolio from "../pages/Portfolio.astro";
 import About from "./About.astro";
 import Contact from "./Contact.astro";
 import Footer from "./Footer.astro";
@@ -12,7 +12,7 @@ import Footer from "./Footer.astro";
 	<Navbar />
 	<Home />
 	<main>
-		<Music />
+		<Portfolio />
 		<About />
 		<Contact />
 	</main>
