--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,13 +1,19 @@
 ---
 import "@fortawesome/fontawesome-free/css/all.css";
+import { socialLinks } from "../config/socials";
+
+interface Props {
+    iconColor?: string;
+}
+
+const { iconColor = "text-accent" } = Astro.props;
 ---
 
 <ol class="grid grid-flow-col gap-5 text-base">
     <li>
         <a
-            class="text-2xl"
-            style="color:var(--color-primary);"
-            href="https://instagram.com/ninelives.studio"
+            class={`text-2xl ${iconColor}`}
+            href={socialLinks.instagram}
             target="_blank"
             aria-label="Instagram"
         >
@@ -16,13 +22,22 @@ import "@fortawesome/fontawesome-free/css/all.css";
     </li>
     <li>
         <a
-            class="text-2xl"
-            style="color:var(--color-primary);"
-            href="https://soundcloud.com/ninelives.studio"
+            class={`text-2xl ${iconColor}`}
+            href={socialLinks.soundcloud}
             target="_blank"
             aria-label="SoundCloud"
         >
             <i class="fab fa-soundcloud"></i>
+        </a>
+    </li>
+    <li>
+        <a
+            class={`text-2xl ${iconColor}`}
+            href={socialLinks.youtube}
+            target="_blank"
+            aria-label="YouTube"
+        >
+            <i class="fab fa-youtube"></i>
         </a>
     </li>
 </ol>
