--- a/src/pages/Footer.astro
+++ b/src/pages/Footer.astro
@@ -2,12 +2,17 @@
 
 ---
 
-<footer
-    class="w-full px-4 md:px-12 xl:px-24 py-8"
-    style="background-color:var(--color-primary); color:var(--color-text-main)"
->
-    <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4">
+<footer class="w-full px-4 md:px-12 xl:px-24 py-8 bg-accent text-primary">
+    <div
+        class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4"
+    >
         <p>Ninelivestudio.com - Copyright 2025</p>
-        <p>Made with manic obsession by <a href="https://integy.tech" target="_blank" class="underline hover:opacity-80">Integy.tech</a></p>
+        <p>
+            Made with manic obsession by <a
+                href="https://integy.tech"
+                target="_blank"
+                class="underline hover:opacity-80">Integy.tech</a
+            >
+        </p>
     </div>
 </footer>
