--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -9,7 +9,7 @@ interface Props {
 const { iconColor = "text-accent" } = Astro.props;
 ---
 
-<ol class="grid grid-flow-col gap-5 text-base">
+<ul class="grid grid-flow-col gap-5 text-base">
     <li>
         <a
             class={`text-2xl ${iconColor}`}
@@ -40,4 +40,4 @@ const { iconColor = "text-accent" } = Astro.props;
             <i class="fab fa-youtube"></i>
         </a>
     </li>
-</ol>
+</ul>
