--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -10,7 +10,7 @@ import aboutImage from "../assets/about-image.jpeg";
   <div class="w-full md:w-2/3 flex order-last md:order-none">
     <Image
       src={aboutImage}
-      alt="About Nine Lives Studio"
+      alt="CEO de Nine Lives Studio"
       class="rounded-xl object-cover w-full md:max-w-[50vw] aspect-square md:aspect-auto bg-fill"
     />
   </div>
