--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -14,7 +14,7 @@ import { socialLinks } from "../config/socials";
     </h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
         <article>
-            <p class="text-sm font-bold text-primary">Información general</p>
+            <h2 class="text-sm font-bold text-primary">Información general</h2>
             <p class="my-3 text-sm font-regular text-primary">Escríbenos a:</p>
             <a
                 class="font-medium underline text-accent"
@@ -22,7 +22,7 @@ import { socialLinks } from "../config/socials";
             >
         </article>
         <article>
-            <p class="text-sm font-bold text-primary">Reservas</p>
+            <h2 class="text-sm font-bold text-primary">Reservas</h2>
             <p class="my-3 text-sm font-normal text-primary">
                 ¿Quieres trabajar con nosotros o agendar una sesión?
             </p>
@@ -33,7 +33,7 @@ import { socialLinks } from "../config/socials";
             >
         </article>
         <article>
-            <p class="text-sm font-bold text-primary">Redes sociales</p>
+            <h2 class="text-sm font-bold text-primary">Redes sociales</h2>
             <p class="my-3 text-sm font-normal text-primary">
                 Síguenos y mantente al tanto de nuestros últimos proyectos
             </p>
