--- a/src/pages/Home.astro
+++ b/src/pages/Home.astro
@@ -53,7 +53,7 @@ import nlsImage from "../assets/nls.png";
         >
             <Image
                 src={nlsImage}
-                alt="Nine Lives Studio"
+                alt="Nine Lives Studio Logo"
                 class="max-w-full max-h-full object-contain"
             />
         </div>
